- Fixed multiple deposits not showing for countries - Added the displaying of deposit bonuses on table

--- a/api/static/style.css
+++ b/api/static/style.css
@@ -820,3 +820,7 @@
 .small-text {
     font-size: 0.6rem;
 }
+
+.max-bonus {
+    background-color: #4ade8047 !important;
+}
